--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
   }
  /*header*/
  header {
-    font-family: "Playwrite US Trad", cursive;
  }
 /*paragraph content*/
 .text-container {
@@ -16,7 +15,18 @@ body {
     padding: 5px;
     line-height:2.5em;
 
+.sectionTitle { 
+    font-family: "Playwrite US Trad", cursive;
+    text-align: center;
+}
+
+.image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /*Footer*/
     Footer {
     background-color: #c3c3c3;
-}
+    }
