--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     color: black;
     padding: 5px;
     font-family: "Playfair Display", serif;
+    text-align: center;
   }
  /*header*/
  header {
