css image, size, center, radius

--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,16 @@ body {
     text-align: center;
 }
 
+/*images*/
 .image {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 70%;
+}
+
+#amandaImage{
+    border-radius: 50%;
 }
 
 /*Footer*/
